--- a/css/style.css
+++ b/css/style.css
@@ -94,11 +94,12 @@ body {
   align-items: flex-start;
   justify-content: space-between;
 }
-.add-post {
-  width: 67%;
-}
 .posts {
   width: 67%;
+  display: none;
+}
+.posts.visible {
+  display: block;
 }
 .post {
   background-color: #fff;
@@ -461,15 +462,22 @@ body {
   color: #ffffff;
 }
 .add-post {
-  display: flex;
+  display: none;
   flex-direction: column;
+  width: 67%;
+}
+.add-post.visible
+{
+  display: flex;
 }
 .add-title,
-.add-text {
+.add-text,
+.add-tags {
   background: #ffffff;
   border: 1px solid #e8e8e8;
   padding: 23px 30px;
   margin-bottom: 16px;
+  resize: none;
 }
 .add-text {
   min-height: 362px;
